
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MC_BITS_VECT ;
 int MC_BITS_X ;
 int MC_BITS_Y ;
 int MC_BITS_Z ;
 float MC_SCALE_VECT ;
 float MC_SCALE_X ;
 float MC_SCALE_Y ;
 float MC_SCALE_Z ;

void MC_UnCompress(float mat[3][4],const unsigned char * comp)
{
 int val;

 val=(int)((unsigned short *)(comp))[0];
 val-=1<<(MC_BITS_X-1);
 mat[0][3]=((float)(val))*MC_SCALE_X;

 val=(int)((unsigned short *)(comp))[1];
 val-=1<<(MC_BITS_Y-1);
 mat[1][3]=((float)(val))*MC_SCALE_Y;

 val=(int)((unsigned short *)(comp))[2];
 val-=1<<(MC_BITS_Z-1);
 mat[2][3]=((float)(val))*MC_SCALE_Z;

 val=(int)((unsigned short *)(comp))[3];
 val-=1<<(MC_BITS_VECT-1);
 mat[0][0]=((float)(val))*MC_SCALE_VECT;

 val=(int)((unsigned short *)(comp))[4];
 val-=1<<(MC_BITS_VECT-1);
 mat[0][1]=((float)(val))*MC_SCALE_VECT;

 val=(int)((unsigned short *)(comp))[5];
 val-=1<<(MC_BITS_VECT-1);
 mat[0][2]=((float)(val))*MC_SCALE_VECT;


 val=(int)((unsigned short *)(comp))[6];
 val-=1<<(MC_BITS_VECT-1);
 mat[1][0]=((float)(val))*MC_SCALE_VECT;

 val=(int)((unsigned short *)(comp))[7];
 val-=1<<(MC_BITS_VECT-1);
 mat[1][1]=((float)(val))*MC_SCALE_VECT;

 val=(int)((unsigned short *)(comp))[8];
 val-=1<<(MC_BITS_VECT-1);
 mat[1][2]=((float)(val))*MC_SCALE_VECT;


 val=(int)((unsigned short *)(comp))[9];
 val-=1<<(MC_BITS_VECT-1);
 mat[2][0]=((float)(val))*MC_SCALE_VECT;

 val=(int)((unsigned short *)(comp))[10];
 val-=1<<(MC_BITS_VECT-1);
 mat[2][1]=((float)(val))*MC_SCALE_VECT;

 val=(int)((unsigned short *)(comp))[11];
 val-=1<<(MC_BITS_VECT-1);
 mat[2][2]=((float)(val))*MC_SCALE_VECT;
}
